--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": "airbnb-base",
   "rules": {
-    "no-console": ["warn", { "allow": ["warn", "error"] }]
+    "no-console": ["warn", { "allow": ["info", "warn", "error"] }]
   }
 }
