--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,21 +9,23 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "redeploy": "now --docker --alias slapsnack.com"
+    "deploy": "now --npm && now alias"
   },
   "dependencies": {
-    "lodash": "^4.17.3",
-    "next": "^1.2.3",
-    "react": "^15.4.1",
-    "uploadcare-widget": "^2.10.2",
-    "whatwg-fetch": "^2.0.1"
+    "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.4",
+    "next": "^2.2.0",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "uploadcare-widget": "^2.10.3"
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
-    "eslint": "^3.12.2",
-    "eslint-config-airbnb": "^13.0.0",
+    "babel-eslint": "^7.2.3",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.8.0"
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3"
   }
 }
