--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint .;exit 0",
+    "eslint": "eslint .;exit 0",
+    "prettier": "prettier --print-width 100 --single-quote --trailing-comma es5 --write \"*.js\" \"{lib,models,routes}/**/*.js\"",
     "lt": "lt -p 8080 -s slapsnack",
     "dev": "NODE_ENV='development' nodemon",
     "start": "node .",
@@ -27,6 +28,7 @@
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
     "localtunnel": "^1.8.2",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "prettier": "^1.2.2"
   }
 }
