--- a/frontend/now.json
+++ b/frontend/now.json
@@ -1,5 +1,6 @@
 {
   "name": "slapsnack-frontend",
+  "public": true,
   "type": "npm",
   "alias": ["slapsnack.com", "www.slapsnack.com", "snapslack.co", "www.snapslack.co"],
   "engines": {
