--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,5 +1,8 @@
 {
-  "extends": "airbnb-base",
+  "extends": [
+    "airbnb-base",
+    "prettier"
+  ],
   "rules": {
     "no-console": ["warn", { "allow": ["info", "warn", "error"] }]
   }
