--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-config-prettier": "^2.1.0",
     "eslint-plugin-import": "^2.2.0",
     "localtunnel": "^1.8.2",
     "nodemon": "^1.11.0",
