--- a/backend/package.json
+++ b/backend/package.json
@@ -7,27 +7,27 @@
     "prettier": "prettier --print-width 100 --single-quote --trailing-comma es5 --write \"*.js\" \"{lib,models,routes}/**/*.js\"",
     "lt": "lt -p 8080 -s slapsnack",
     "dev": "NODE_ENV='development' nodemon",
-    "deploy": "now --npm -E .env/production.env && now alias"
+    "deploy": "now -E .env/production.env && now alias"
   },
   "dependencies": {
-    "@slack/client": "^3.9.0",
+    "@slack/client": "^3.10.0",
     "analytics-node": "^2.4.1",
-    "body-parser": "^1.17.1",
+    "body-parser": "^1.17.2",
     "cors": "^2.8.3",
     "dotenv": "^4.0.0",
-    "express": "^4.15.2",
+    "express": "^4.15.3",
     "lodash": "^4.17.4",
-    "mongoose": "^4.9.9",
+    "mongoose": "^4.10.4",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-config-prettier": "^2.1.0",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-config-prettier": "^2.1.1",
+    "eslint-plugin-import": "^2.3.0",
     "localtunnel": "^1.8.2",
     "nodemon": "^1.11.0",
-    "prettier": "^1.3.1"
+    "prettier": "^1.4.0"
   }
 }
