--- a/frontend/now.json
+++ b/frontend/now.json
@@ -2,7 +2,12 @@
   "name": "slapsnack-frontend",
   "public": true,
   "type": "npm",
-  "alias": ["slapsnack.com", "www.slapsnack.com", "snapslack.co", "www.snapslack.co"],
+  "alias": [
+    "slapsnack.com",
+    "www.slapsnack.com",
+    "snapslack.co",
+    "www.snapslack.co"
+  ],
   "engines": {
     "node": "7.10.0"
   }
