--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,12 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "deploy": "now --npm && now alias"
+    "deploy": "now && now alias"
   },
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
-    "next": "^2.3.1",
+    "next": "^2.4.1",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
@@ -24,11 +24,11 @@
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-config-prettier": "^2.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-prettier": "^2.1.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
-    "prettier": "^1.3.1"
+    "prettier": "^1.4.0"
   }
 }
