--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "prettier": "prettier --print-width 100 --single-quote --trailing-comma es5 --write \"*.js\" \"{lib,models,routes}/**/*.js\"",
     "lt": "lt -p 8080 -s slapsnack",
     "dev": "NODE_ENV='development' nodemon server.js",
-    "deploy": "now -E .env/production.env && now alias"
+    "deploy": "now -E .env/production.env && now alias",
+    "cleanup": "now rm slapsnack-backend --safe -y"
   },
   "dependencies": {
     "@slack/client": "^3.10.0",
@@ -17,17 +18,17 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "lodash": "^4.17.4",
-    "mongoose": "^4.10.7",
+    "mongoose": "^4.11.1",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.2.0",
-    "eslint-config-prettier": "^2.2.0",
-    "eslint-plugin-import": "^2.3.0",
+    "eslint-config-prettier": "^2.3.0",
+    "eslint-plugin-import": "^2.6.1",
     "localtunnel": "^1.8.3",
     "nodemon": "^1.11.0",
-    "prettier": "^1.4.4"
+    "prettier": "^1.5.2"
   }
 }
