--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,25 +11,25 @@
     "build": "next build",
     "start": "next start",
     "deploy": "now && now alias",
-    "cleanup": "now rm slapsnack-backend --safe -y"
+    "cleanup": "now rm slapsnack-frontend --safe -y"
   },
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
-    "next": "^2.4.6",
+    "next": "^3.0.6",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "uploadcare-widget": "^3.0.1"
+    "uploadcare-widget": "^3.1.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.2",
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb": "^15.1.0",
     "eslint-config-prettier": "^2.3.0",
-    "eslint-plugin-import": "^2.6.1",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.0",
-    "eslint-plugin-react": "^7.1.0",
-    "prettier": "^1.5.2"
+    "eslint-plugin-react": "^7.3.0",
+    "prettier": "^1.6.0"
   }
 }
