--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "eslint": "eslint .;exit 0",
-    "prettier": "prettier --print-width 100 --single-quote --trailing-comma all --write \"{components,lib,pages}/**/*.js\"",
+    "prettier": "prettier --write \"{components,lib,pages}/**/*.js\"",
     "dev": "next",
     "build": "next build",
     "start": "next start",
@@ -16,7 +16,7 @@
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
-    "next": "^3.0.6",
+    "next": "^3.2.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -24,12 +24,12 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
-    "eslint": "^4.5.0",
+    "eslint": "^4.6.1",
     "eslint-config-airbnb": "^15.1.0",
-    "eslint-config-prettier": "^2.3.0",
+    "eslint-config-prettier": "^2.4.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.0",
     "eslint-plugin-react": "^7.3.0",
-    "prettier": "^1.6.0"
+    "prettier": "^1.6.1"
   }
 }
