--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "eslint": "eslint .;exit 0",
-    "prettier": "prettier --print-width 100 --single-quote --trailing-comma es5 --write \"*.js\" \"{lib,models,routes}/**/*.js\"",
+    "prettier": "prettier --write \"*.js\" \"{lib,models,routes}/**/*.js\"",
     "lt": "lt -p 8080 -s slapsnack",
     "dev": "NODE_ENV='development' nodemon server.js",
     "deploy": "now -E .env/production.env && now alias",
@@ -18,17 +18,17 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "lodash": "^4.17.4",
-    "mongoose": "^4.11.9",
+    "mongoose": "^4.11.10",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
   },
   "devDependencies": {
-    "eslint": "^4.5.0",
-    "eslint-config-airbnb-base": "^11.3.2",
-    "eslint-config-prettier": "^2.3.0",
+    "eslint": "^4.6.1",
+    "eslint-config-airbnb-base": "^12.0.0",
+    "eslint-config-prettier": "^2.4.0",
     "eslint-plugin-import": "^2.7.0",
     "localtunnel": "^1.8.3",
-    "nodemon": "^1.11.0",
-    "prettier": "^1.6.0"
+    "nodemon": "^1.12.0",
+    "prettier": "^1.6.1"
   }
 }
