--- a/backend/package.json
+++ b/backend/package.json
@@ -8,27 +8,28 @@
     "lt": "lt -p 8080 -s slapsnack",
     "dev": "NODE_ENV='development' nodemon server.js",
     "deploy": "now -E .env/production.env && now alias",
+    "logs": "now logs backend.slapsnack.com",
     "cleanup": "now rm slapsnack-backend --safe -y"
   },
   "dependencies": {
-    "@slack/client": "^3.12.0",
+    "@slack/client": "^3.14.1",
     "analytics-node": "^3.0.0",
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
-    "express": "^4.15.4",
+    "express": "^4.16.2",
     "lodash": "^4.17.4",
-    "mongoose": "^4.11.10",
-    "request": "^2.81.0",
-    "request-promise": "^4.2.1"
+    "mongoose": "^4.12.1",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {
-    "eslint": "^4.6.1",
-    "eslint-config-airbnb-base": "^12.0.0",
-    "eslint-config-prettier": "^2.4.0",
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb-base": "^12.0.2",
+    "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-import": "^2.7.0",
     "localtunnel": "^1.8.3",
     "nodemon": "^1.12.0",
-    "prettier": "^1.6.1"
+    "prettier": "^1.7.4"
   }
 }
