remove unused error page

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -12,6 +12,7 @@
     "react/jsx-filename-extension": ["error", { "extensions": [".js", ".jsx"] }],
     "react/react-in-jsx-scope": ["off"],
     "react/jsx-curly-brace-presence": ["off"],
-    "react/no-typos": ["off"]
+    "react/no-typos": ["off"],
+    "jsx-a11y/anchor-is-valid": ["off"]
   }
 }
